--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 </head>
 <body class="container-fluid" style="">
 
-<h1>Js aprendizagens</h1>
-<h3>Conteúdo incrível</h3>
+<h1 style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; text-align: center;">BatataDeCódigos Aprendizagens</h1>
+<h3 style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; text-align: center;">Minhas matérias e conteúdos.</h3>
 <header class="row" style="">
         
 </header>
 
 <main class="row" style="">
+    <button type="button">Técnico</button>
     <article>
 
     </article>
