--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
 <h1 style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; text-align: center;">BatataDeCódigos Aprendizagens</h1>
 <h3 style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; text-align: center;">Minhas matérias e conteúdos.</h3>
 <header class="row" style="">
-        <nav class="col-xl-12 col-sm-12">
-            <ul class="nav"></ul>
-        </nav>
+        
 </header>
 
 <main class="row" style="">
-    <button type="button">Técnico</button>
     <article>
+        <div class="kk">
+<h1>Matérias e conteúdos de aulas.</h1>
+            <button type="btn-tec">Técnico</button>
 
+            
+        </div>
     </article>
 </main>
 
