--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
 <main class="row" style="">
     <article>
-        <div class="kk">
-<h1>Matérias e conteúdos de aulas.</h1>
-            <button type="btn-tec">Técnico</button>
-
-            
-        </div>
+      <button>técnico</button>
+            <div id="popup">
+                <h1>Aprendemos:</h1>
+            <p>Boootstrap, jQuery e um teco de JavaScript!</p>
+            </div>
+    
     </article>
 </main>
 
