n sei, toma commit

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 
-<head>
+<head> 
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,18 +12,18 @@
         <link rel="stylesheet" href="inutilizavel.css">
     <title>Matérias</title>
 </head>
-<body class="container-fluid" style="">
+<body class="container-fluid" style="text-align: center; background-color: rgb(0, 0, 0); margin: 0%; padding: 0%;">
+<header class="row" style=" text-align: center; margin: 0%; padding: 0%; background-size: 100%; background-color: rgb(110, 110, 110); width: 100%; height: 200px; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
+<div class="ba" style="display: list-item;">
+<b><h1 style="padding-left: 380px; margin-top: 40px;">BatataDeCodigos Aprendizagens</h1></b>
+<i><b><p style="padding-left: 380px; font-size: 30px;">Matérias e Conteúdos em Botões.</p></b></i>
+</div>
 
-<h1 style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; text-align: center;">BatataDeCódigos Aprendizagens</h1>
-<h3 style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; text-align: center;">Minhas matérias e conteúdos.</h3>
-<header class="row" style="">
-        
 </header>
-
-<main class="row" style="">
+<main class="row">
     <article class="caixa">
-      <div id="sla">
-      <button class="btns" style="border: 2px solid black; background-color: darkgray;">Avaliar</button>
+      <div id="sla" style="padding-left: 650px;">
+      <button class="btns" style="border: 2px solid black; background-color: rgb(202, 202, 202);">Avaliar</button>
     <h1 id="Técnico"></h1>
     <p id="tec"></p>
     </div>
@@ -102,7 +102,7 @@
         Aprendemos a saber onde se tem terras com problemas diversos e políticos em todo o Brasil, como as terras demarcadas e seus conflitos.
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal" style="background-color: darkgray;">Ok</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal" style="background-color: rgb(255, 108, 108);">Ok</button>
       </div>
     </div>
   </div>
@@ -116,7 +116,7 @@
 <div id="ch">
 
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop2">
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop2" style="background-color: rgb(192, 0, 240);">
   CiênciasHumanas
 </button>
 
@@ -134,16 +134,17 @@
         Aprendemos as diversas regras do Capitalismo e aprendemos as nescessidades dos povos antigos e suas variedades, tanto os modos de pensamentos e modos de observar e evoluirem. 
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Ok</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal" style="background-color: rgb(165, 32, 165);">Ok</button>
       </div>
     </div>
   </div>
+</div>
 </div>
 
 <div id="Linguas">
 
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#static">
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#static" style="background-color: rgb(255, 111, 54);">
     Línguas
 </button>
 
@@ -162,14 +163,41 @@
          In English, we have seen some Verbs in Future, Past and Present, to know how to use in correct form and when. Making powerpoints and canva's slides with Technology things.
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Ok</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal" style="background-color: rgb(255, 130, 13);">Ok</button>
       </div>
     </div>
   </div>
 </div>
-
 </div>
 
+<div id="Art">
+
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#example2" style="background-color: rgb(255, 44, 132);">
+  Artes
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="example2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Artes</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Vimos como o Teatro se encaixa na filosofia do drama, romance, do terror e do mistério. E também demos uma bela olhada nas encenações antigas para as atuais.
+        Fizemos um filme em grupo para testarmos as técnicas utilizadas nas demonstrações.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal" style="background-color: rgb(108, 118, 255);">Ok</button>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
 
 
     </article>
