--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="inutilizavel.css">
     <title>Matérias</title>
 </head>
-<body class="container-fluid" style="text-align: center; background-color: rgb(0, 0, 0); margin: 0%; padding: 0%;">
+<body class="container-fluid" style="background-color: rgb(0, 0, 0); margin: 0%; padding: 0%;">
 <header class="row" style=" text-align: center; margin: 0%; padding: 0%; background-size: 100%; background-color: rgb(110, 110, 110); width: 100%; height: 200px; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
 <div class="ba" style="display: list-item;">
 <b><h1 style="padding-left: 380px; margin-top: 40px;">BatataDeCodigos Aprendizagens</h1></b>
@@ -28,7 +28,7 @@
     <p id="tec"></p>
     </div>
 
-<div class="buttons">
+<div class="buttons" style="padding-left: 600px;">
 
     <div id="sandro">
     <!-- Button trigger modal -->
@@ -107,10 +107,6 @@
     </div>
   </div>
 </div>
-
-</div>
-
-
 </div>
 
 <div id="ch">
@@ -198,6 +194,94 @@
   </div>
 </div>
 </div>
+
+<div id="qui">
+
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticb" style="background-color: rgb(218, 218, 0);">
+  Química
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="staticb" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel">Química</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Aprendemos sobre Ânions e os Cátions e as ligações da Química.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal" style="background-color: yellow;">Ok</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+</div>
+
+<div id="bi">
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#stat">
+  Biologia
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="stat" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel">Biologia</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Aprendemos sobre citologia e a poluição e como ela afeta verdadeiramente o planeta.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Ok</button>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+
+<div class="fis">
+
+  <!-- Button trigger modal -->
+  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBack" style="background-color: rgb(41, 114, 41);">
+    Física
+  </button>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="staticBack" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="staticBackdropLabel">Física</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          Aprendemos a calcular velocidade e as trajetórias do movimento e deslocamento.
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Ok</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+
+
+</div>
+
 
 
     </article>
