--- a/index.html
+++ b/index.html
@@ -17,30 +17,31 @@
 <div class="ba" style="display: list-item;">
 <b><h1 style="padding-left: 380px; margin-top: 40px;">BatataDeCodigos Aprendizagens</h1></b>
 <i><b><p style="padding-left: 380px; font-size: 30px;">Matérias e Conteúdos em Botões.</p></b></i>
+<div id="sla">
+  <button class="btns" style="border: 2px solid black; background-color: rgb(202, 202, 202);">Avaliar</button>
+</div>
+
 </div>
 
 </header>
 <main class="row">
     <article class="caixa">
-      <div id="sla" style="padding-left: 650px;">
-      <button class="btns" style="border: 2px solid black; background-color: rgb(202, 202, 202);">Avaliar</button>
-    <h1 id="Técnico"></h1>
-    <p id="tec"></p>
-    </div>
-
-<div class="buttons" style="padding-left: 600px;">
+      <br>
+      <br>
+      <br>
+<div class="buttons">
 
     <div id="sandro">
     <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-    Técnico
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" style="background-color: rgb(0, 67, 211);">
+    TécnicoProfissional
 </button>
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Técnico</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Técnico Profissional</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -75,7 +76,7 @@
       Aprendemos a fazer mapas mentais sobre assuntos sustentáveis e sites sobre, e também ferramentas no Excel.
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal" style="background-color: darkgrey;">Ok</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal" style="background-color: green;">Ok</button>
       </div>
     </div>
   </div>
@@ -112,8 +113,8 @@
 <div id="ch">
 
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop2" style="background-color: rgb(192, 0, 240);">
-  CiênciasHumanas
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop2" style="background-color: rgb(118, 0, 148);">
+  <marquee>CiênciasHumanas</marquee>
 </button>
 
 <!-- Modal -->
@@ -169,7 +170,7 @@
 <div id="Art">
 
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#example2" style="background-color: rgb(255, 44, 132);">
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#example2" style="background-color: rgb(219, 0, 91);">
   Artes
 </button>
 
@@ -188,46 +189,17 @@
         Fizemos um filme em grupo para testarmos as técnicas utilizadas nas demonstrações.
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal" style="background-color: rgb(108, 118, 255);">Ok</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal" style="background-color: rgb(219, 0, 91);">Ok</button>
       </div>
     </div>
   </div>
 </div>
 </div>
 
-<div id="qui">
-
+<div id="CN">
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticb" style="background-color: rgb(218, 218, 0);">
-  Química
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="staticb" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="staticBackdropLabel">Química</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        Aprendemos sobre Ânions e os Cátions e as ligações da Química.
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal" style="background-color: yellow;">Ok</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-</div>
-
-<div id="bi">
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#stat">
-  Biologia
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#stat" style="background-color: rgb(255, 238, 83); color: black;">
+  <marquee>CiênciasDaNatureza</marquee>
 </button>
 
 <!-- Modal -->
@@ -235,54 +207,26 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="staticBackdropLabel">Biologia</h5>
+        <h5 class="modal-title" id="staticBackdropLabel">Ciências Da Natureza</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        Aprendemos sobre citologia e a poluição e como ela afeta verdadeiramente o planeta.
+        Aprendemos sobre citologia e a poluição e como ela afeta verdadeiramente o planeta na Biologia. 
+        Em Física aprendemos a calcular velocidade e as trajetórias do movimento e deslocamento.
+        Em Química aprendemos sobre Ânions e os Cátions e as ligações da Química.
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Ok</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal" style="background-color: rgb(255, 238, 83); color: black;">Ok</button>
       </div>
     </div>
   </div>
 </div>
 </div>
 
-<div class="fis">
-
-  <!-- Button trigger modal -->
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBack" style="background-color: rgb(41, 114, 41);">
-    Física
-  </button>
-  
-  <!-- Modal -->
-  <div class="modal fade" id="staticBack" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="staticBackdropLabel">Física</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          Aprendemos a calcular velocidade e as trajetórias do movimento e deslocamento.
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Ok</button>
-        </div>
-      </div>
-    </div>
-  </div>
-  </div>
-
 
 </div>
-
-
 
     </article>
     
